# python-mini-course

./: .gitignore  DSA Learning.txt  LICENSE  README.md  dsa_mini_byte.txt  requirements.txt  setup.sh
.github/workflows/: python-tests.yml
extras/06_package_building/: pyproject.toml  setup.py
level-1-python-fundamentals/01_intro_hello_world/: README.md  hello.py  try_package.py
level-1-python-fundamentals/02_variables_data_types/: README.md  basic_variables.py  input_output_casting.py  type_checking.py
level-1-python-fundamentals/03_control_flow/: README.md  for_loop_examples.py  if_else_conditions.py  loop_control_statements.py  while_loop_examples.py
level-1-python-fundamentals/04_functions_modules/: README.md  basic_function.py  custom_module_example.py  deafult_keyword_args.py  functions_scope.py  return_vs_print.py
level-1-python-fundamentals/05_data_structures/: README.md  dict_operations.py  list_operations.py  mutable_vs_immutable.py  set_operations.py  tuple_basics.py
level-1-python-fundamentals/06_file_handling/: README.md  append_file.py  binary_file.py  demo.txt  encrypting_file.py  file_paths.py  read_file.py  secert.encrypted  secert.txt  write_file.py
level-1-python-fundamentals/07_exceptions/: README.md  basic_exception.py  custom_exception.py  multiple_exceptions.py  try_else_final.py
level-1-python-fundamentals/08_advanced_topics/: all_any_func.py  args_and_kwargs.py  args_kwargs_02.py  collections_ex.py  combinations_itertools.py  comprehension.py  comprehension_examples.py  context_managers.py  count_itertools.py  cycle_itertools.py  (+26 more)
(+1 files in other folders)
